--- a/index.html
+++ b/index.html
@@ -9,20 +9,31 @@
 </head>
 <body>
 
-<a href="https://en.wikipedia.org/wiki/Dung_beetle">
+  <a href="https://en.wikipedia.org/wiki/Dung_beetle">
 
   <header>
     <h1>Dung Beetle</h1>
+    <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
   </header>
 
-<main>
-  <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
-  ul>
-    <li>
-    <li>
-    <li>
-    <li>
-  </ul>
+  <main>
+    <dl>
+      <dt>Kingdom</dt>
+      <dd>Animalia</dd>
+      <dt>Phylum</dt>
+      <dd>Arthropoda</dd>
+      <dt>Class</dt>
+      <dd>Insecta</dd>
+      <dt>Order</dt>
+      <dd>Coleoptera</dd>
+      <dt>Suborder</dt>
+      <dd>Polyphaga</dd>
+      <dt>Superfamily</dt>
+      <dd>Scarabaeidea</dd>
+      <dt>Family</dt>
+      <dd>Scarabidae</dd>
+    </dl>
+
 </main>
 
 <footer>
