html footer added

--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
       <dt>Family</dt>
       <dd>Scarabidae</dd>
     </dl>
+  </main>
 
-</main>
+  <footer>
+    <div>
+      <span>Learn more...</span>
+    </div>
+  </footer>
 
-<footer>
-  <span><a href="">Kingdom: Animalia</a></span>
-</footer>
-
-
+</a>
 
 </body>
 </html>
