header fix and connected css

--- a/index.html
+++ b/index.html
@@ -9,34 +9,34 @@
 </head>
 <body>
 
-  <a href="https://en.wikipedia.org/wiki/Dung_beetle">
+  <a class="link-card"href="https://en.wikipedia.org/wiki/Dung_beetle">
 
   <header>
-    <h1>Dung Beetle</h1>
+    <h2>Dung Beetle</h2>
     <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
   </header>
 
   <main>
     <dl>
-      <dt>Kingdom</dt>
-      <dd>Animalia</dd>
-      <dt>Phylum</dt>
-      <dd>Arthropoda</dd>
-      <dt>Class</dt>
-      <dd>Insecta</dd>
-      <dt>Order</dt>
-      <dd>Coleoptera</dd>
-      <dt>Suborder</dt>
-      <dd>Polyphaga</dd>
-      <dt>Superfamily</dt>
-      <dd>Scarabaeidea</dd>
-      <dt>Family</dt>
-      <dd>Scarabidae</dd>
+      <dt class="link-card">Kingdom</dt>
+      <dd class="link-card">Animalia</dd>
+      <dt class="link-card">Phylum</dt>
+      <dd class="link-card">Arthropoda</dd>
+      <dt class="link-card">Class</dt>
+      <dd class="link-card">Insecta</dd>
+      <dt class="link-card">Order</dt>
+      <dd class="link-card">Coleoptera</dd>
+      <dt class="link-card">Suborder</dt>
+      <dd class="link-card">Polyphaga</dd>
+      <dt class="link-card">Superfamily</dt>
+      <dd class="link-card">Scarabaeoidea</dd>
+      <dt class="link-card">Family</dt>
+      <dd class="link-card">Scarabidae</dd>
     </dl>
   </main>
 
   <footer>
-    <div>
+    <div class="btn">
       <span>Learn more...</span>
     </div>
   </footer>
