--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet">
 </head>
 <body>
-
   <a class="link-card"href="https://en.wikipedia.org/wiki/Dung_beetle">
-
+  <article>
   <header>
     <h2>Dung Beetle</h2>
     <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
@@ -18,29 +17,29 @@
 
   <main>
     <dl>
-      <dt class="link-card">Kingdom</dt>
-      <dd class="link-card">Animalia</dd>
-      <dt class="link-card">Phylum</dt>
-      <dd class="link-card">Arthropoda</dd>
-      <dt class="link-card">Class</dt>
-      <dd class="link-card">Insecta</dd>
-      <dt class="link-card">Order</dt>
-      <dd class="link-card">Coleoptera</dd>
-      <dt class="link-card">Suborder</dt>
-      <dd class="link-card">Polyphaga</dd>
-      <dt class="link-card">Superfamily</dt>
-      <dd class="link-card">Scarabaeoidea</dd>
-      <dt class="link-card">Family</dt>
-      <dd class="link-card">Scarabidae</dd>
+      <dt class="list">Kingdom</dt>
+      <dd class="list-2">Animalia</dd>
+      <dt class="list">Phylum</dt>
+      <dd class="list-2">Arthropoda</dd>
+      <dt class="list">Class</dt>
+      <dd class="list-2">Insecta</dd>
+      <dt class="list">Order</dt>
+      <dd class="list-2">Coleoptera</dd>
+      <dt class="list">Suborder</dt>
+      <dd class="list-2">Polyphaga</dd>
+      <dt class="list">Superfamily</dt>
+      <dd class="list-2">Scarabaeoidea</dd>
+      <dt class="list">Family</dt>
+      <dd class="list-2">Scarabidae</dd>
     </dl>
   </main>
 
   <footer>
-    <div class="btn">
-      <span>Learn more...</span>
+    <div>
+      <span class="btn">Learn more...</span>
     </div>
   </footer>
-
+  </article>
 </a>
 
 </body>
